# libjnicrypto

./: CMakeLists.txt  README.md  makefile
src/: CMakeLists.txt  CryptUtil.cpp  CryptUtil.hpp  gtpproxy.cpp  gtpproxy.hpp
src/ext/: CMakeLists.txt
src/jnicrypto/: CMakeLists.txt  CryptUtil.cpp  CryptUtil.hpp
src/lib/: CMakeLists.txt
src/lib/crypt/: crypt.cpp  crypt.hpp  eea2.cpp  eea2.hpp  eia2.cpp
src/lib/gtp/: gtp.cpp  gtp.hpp  task.cpp  task.hpp  types.hpp  utils.cpp  utils.hpp
src/utils/: CMakeLists.txt  common.cpp  constants.hpp  nts.hpp  sqn_mng.cpp  sqn_mng.hpp
